# rust-ecs-opengl

./: .travis.yml  Cargo.toml  README.md
models/cube/: Cube_obj.mtl
models/gun/: modified_gun.mtl
src/: debugging.rs  main.rs  post_processing_effects.rs  shader_compilation.rs  triangle.frag  triangle.vert  utils.rs
src/containers/: global_instances.rs
src/ecs/: components.rs  resources.rs  systems.rs
src/ecs/systems/: mod.rs  physics.rs
src/engine/: lib.rs  post_processing_effects.rs  shapes.rs
src/engine/containers/: global_instances.rs  mod.rs
src/engine/ecs/: components.rs
src/engine/ecs/systems/: mod.rs  physics.rs
src/engine/gl_wrapper/: ebo.rs  fbo.rs  mod.rs  rbo.rs  shader_compilation.rs  texture_2d.rs  texture_cube_map.rs  ubo.rs  vao.rs  vbo.rs
src/engine/shaders/: mod.rs
src/engine/shaders/cube_map/: cube_map.frag  cube_map.vert  mod.rs
src/engine/shaders/diffuse/: diffuse.frag  diffuse.vert  mod.rs
src/engine/shaders/outline/: mod.rs  outline.frag  outline.vert
src/engine/shaders/post_processing/: mod.rs  simple.vert
src/engine/shaders/voxel/: mod.rs  voxel.frag  voxel.vert
src/engine/voxel_2d/: mod.rs
src/gl_wrapper/: ebo.rs  fbo.rs  mod.rs  shader_compilation.rs  texture_2d.rs  vao.rs  vbo.rs
src/shaders/: diffuse.frag  diffuse.rs  diffuse.vert  mod.rs
src/shaders/diffuse/: diffuse.vert  mod.rs
src/shaders/outline/: mod.rs  outline.vert
src/shaders/post_processing/: mod.rs  post_processing.frag
src/shaders/post_processing/gaussian_blur/: blur.frag
src/shaders/post_processing/kernel/: kernel.frag  mod.rs
(+2 files in other folders)
