[package]
name = "rust-learn"
version = "0.1.0"
authors = ["Rosca Alex <roscaalex19@gmail.com>"]
edition = "2018"

[dependencies]
glfw = "0.29.0"
gl = "0.6.0"
image = "0.21.2"
cgmath = "0.17.0"
specs = "0.15.0"
genmesh = "0.6.2"
#nalgebra = "0.17"
#ncollide3d = "0.18"
#nphysics3d = "0.10"

[features]
default = ["gl_debug"]
gl_debug = []