[package]
name = "rust-learn"
version = "0.1.0"
authors = ["Rosca Alex <roscaalex19@gmail.com>"]
edition = "2018"

[dependencies]
glfw = "0.29.0"
gl = "0.13.0"
image = "0.21.2"
specs = "0.15.0"
specs-derive = "0.4.0"
genmesh = "0.6.2"
nalgebra-glm = "0.4.0"
nalgebra = "0.18.0"
ncollide3d = "0.19.2"
nphysics3d = "0.11.1"
tobj = "0.1.10"
time = "0.1.42"
state = { version = "0.4.1", features = ["const_fn", "tls"] }
log = "0.4.8"
pretty_env_logger = "0.3.1"

[features]
default = ["gl_debug"]
gl_debug = []

[lib]
name = "engine"
path = "src/engine/lib.rs"